# openembedded-core

./: .b4-config  .gitignore  .gitmodules  .templateconf  LICENSE  MAINTAINERS.md  README  README.OE-Core.md  README.commands  README.hardware  README.host.sdk  README.qemu  README.qemu.md  README.structure  cgitrc  oe-init-build-env  oe-init-build-env-memres  poky-init-build-env  readme.txt  setdevenv
bitbake/: ChangeLog  MANIFEST
bitbake-dev/: ChangeLog
contrib/git-hooks/: sendemail-validate.sample
documentation/adt-manual/: Makefile  adt-command.xml  adt-eclipse.xml  adt-intro.xml  adt-manual.xml  adt-package.xml  adt-prepare.xml  style.css
documentation/bsp-guide/: Makefile  bsp-guide.xml  bsp.xml  style.css
documentation/kernel-manual/: Makefile  kernel-concepts.xml  kernel-doc-intro.xml  kernel-how-to.xml  kernel-manual.xml  style.css  yocto-project-kernel-manual-customization.xsl  yocto-project-kernel-manual.xml
documentation/poky-ref-manual/: Makefile  bsp-guide.xml  bsp.xml  development.xml  extendpoky.xml  faq.xml  introduction.xml  poky-handbook.xml  poky-ref-manual-customization.xsl  poky-ref-manual.xml  ref-bitbake.xml  ref-classes.xml  ref-features.xml  ref-images.xml  ref-structure.xml  ref-variables.xml  ref-varlocality.xml  resources.xml  style.css  usingpoky.xml
documentation/tools/: poky-docbook-to-pdf
documentation/yocto-project-qs/: Makefile  (+2 more)
handbook/: ChangeLog  Makefile  TODO  bsp-guide.xml  bsp.xml  contactus.xml  development.xml  extendpoky.xml  faq.xml  introduction.xml  poky-handbook.html  poky-handbook.xml  ref-bitbake.xml  ref-classes.xml  ref-images.xml  ref-structure.xml  ref-variables.xml  ref-varlocality.xml  resources.xml  style.css  usingpoky.xml
handbook/poky-doc-tools/: ChangeLog  Makefile.am  README  autogen.sh  configure.ac  poky-docbook-to-pdf.in
handbook/poky-doc-tools/common/: Makefile.am  VeraMoBd.xml  VeraMono.xml  fop-config.xml.in  poky-db-pdf.xsl
meta/: recipes.txt
meta-emenlow/: README
scripts/: README  autobuilder-worker-prereq-tests  autospectacle.pl  b4-wrapper-poky.py  bitbake  bitbake-prserv-tool  bitbake-whatchanged  buildhistory-collect-srcrevs  buildhistory-diff  buildstats-diff  buildstats-summary  clean-hashserver-database  cleanup-workdir  combo-layer  combo-layer-hook-default.sh  combo-layer.conf.example  cp-noerror  creat-lsb-image  create-lsb-image  create-pull-request  create-recipe  crosstap  cve-json-to-text.py  devtool  gen-lockedsig-cache  hob  install-buildtools  lnr  multilib_header_wrapper.h  oe-build-perf-report  oe-build-perf-test  oe-buildenv-internal  oe-check-sstate  oe-depends-dot  oe-find-native-sysroot  oe-git-archive  oe-git-proxy  oe-git-proxy-socks-command  oe-pkgdata-browser  oe-pkgdata-browser.glade  (+87 more)
(+19972 files in other folders)
